syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mikkaeru";
option java_outer_classname = "KeymanagerGrpc";

package com.mikkaeru;

service KeymanagerService {
  rpc registerPixKey (KeyPixRequest) returns (KeyPixResponse) {}
}

message KeyPixRequest {
  string clientId = 1;
  string value = 2;
  KeyType keyType = 3;
  AccountType accountType = 4;

  enum KeyType {
    UNKNOWN_KEY_TYPE = 0;
    RANDOM_KEY = 1;
    CPF = 2;
    PHONE = 3;
    EMAIL = 4;
  }

  enum AccountType {
    UNKNOWN_ACCOUNT_TYPE = 0;
    SAVINGS_ACCOUNT = 1;
    CURRENT_ACCOUNT = 2;
  }
}

message KeyPixResponse {
  string clientId = 1;
  string pixId = 2;
}